--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
   },
   "dependencies": {
     "@prisma/client": "^3.2.1",
-    "bcryptjs": "^2.4.3",
+    "axios": "^0.23.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "socket.io": "^4.3.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/socket.io": "^3.0.2",
     "prisma": "^3.2.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
